[package]
name = "physarum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29.15"
wgpu = "0.19.3"
tokio = { version = "1.36.0", features = ["full"] }
bytemuck = { version = "1.15.0", features = [ "derive" ] }
